Bug 43856 - PRINTING: after leaving Print Page Preview with <esc> particular documents will CRASH
Summary: PRINTING: after leaving Print Page Preview with <esc> particular documents wi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium blocker
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA
Keywords: regression
: 44142 44170 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-15 04:32 UTC by Rainer Bielefeld Retired
Modified: 2012-06-15 13:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (176.19 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-12-26 02:09 UTC, Rainer Bielefeld Retired
Details
This crashes when the preview closes (7.48 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-12-26 03:25 UTC, Rob Snelders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-12-15 04:32:06 UTC
Steps to reproduce with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta1 - WIN7 Home Premium (64bit) German UI [Build-ID: 7362ca8-b5a8e65-af86909-d471f98-61464c4] Windows_Release_Configuration  11-Dec-2011 06:51":

1. Open first sample document in "Bug 35589 - xlsx import 
   print area error"
2. Click Standard Task Bar 'Page preview'
   > preview appears
3. <esc> key
   > CRASH
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:8.0.1) Gecko/20111121 Firefox/8.0.1 SeaMonkey/2.5
Comment 1 Rainer Bielefeld Retired 2011-12-26 02:09:56 UTC
Created attachment 54819 [details]
Sample Document

Confirmed by Bug 44142

It's a more general problem, but currently I can't reproduce it with every spreadsheet. Simply creating one by typing several "x" into several cells and then opening and leaving preview will not crash.

But the problem is reproducible with attached sample "Defect_Statistic.ods", a spreadsheet I created as a tool to keep overview over Bugzilla.

Steps to reproduce:
1. Start LibO
2. Open New Spreadsheet document from Start center
3. open sample document
4. click preview icon
5. <esc>

This proceeding very often ends with a crash for me (also with other documents), but it's not 100% reproducible.
Comment 2 Rainer Bielefeld Retired 2011-12-26 02:13:22 UTC
*** Bug 44142 has been marked as a duplicate of this bug. ***
Comment 3 Rainer Bielefeld Retired 2011-12-26 02:22:30 UTC
Not limited to 3.5.0Beta1, also [Reproducible] with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID:  a286353-090bcba-3bf3b94]" Win-x86@6 – 2011-12-02_22:36:35) and Sample Document (I tried with last sheet).

I am not able to reproduce the problem with 3.4.5, so regression; I see this onte as a blocker.

OS modified due to results in Bug 44142 

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 4 Rob Snelders 2011-12-26 03:25:14 UTC
Created attachment 54821 [details]
This crashes when the preview closes

- Open this document.
- Open the preview
- Close the preview with the button or the menu-option (File->Page Preview) and it crashes.

I run it on a Ubuntu 10.04 x86_64 machine with beta2. I also tried beta1 on a windows XP X86 machine and it also crashes there.

I got it with more documents. But not all.
Comment 5 Markus Mohrhard 2011-12-26 05:53:50 UTC
Was a missing pointer check in the new multiline input code. Will be fixed in beta3 and master.
Comment 6 Markus Mohrhard 2011-12-27 02:49:27 UTC
*** Bug 44170 has been marked as a duplicate of this bug. ***
Comment 7 Rob Snelders 2012-06-15 13:30:28 UTC
Tried with 3.5.4 on Ubuntu 12.04 x86_64 and it did work.