missing pointer check in new multiline input code, fdo#43856